--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,4 +1,6 @@
-.login {}
+.login {
+    margin: 0 30px;
+}
 
 .entrance-form {
     display: flex;
@@ -46,6 +48,7 @@
     margin: 5px 0 24px 0;
     padding: 0 0 10px 0;
     outline: 0;
+    background-color: transparent;
 }
 
 .form__input:last-of-type {
