--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,3 +1,7 @@
+.register {
+    margin: 0 30px;
+}
+
 .entrance-form {
     display: flex;
     flex-direction: column;
@@ -44,6 +48,7 @@
     margin: 5px 0 24px 0;
     padding: 0 0 10px 0;
     outline: 0;
+    background-color: transparent;
 }
 
 .form__input:last-of-type {
